专线 和 快递运输类似，不需要选择运输单号

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -95,7 +95,9 @@
                 #{power.ck "deliverplans.index"}
                   <li><a href="@{Deliverplans.index()}">出货单</a></li>
                 #{/power.ck}
-
+                #{power.ck "procures.datapanel"}
+                  <li><a href="@{ProcureUnits.dataPanel()}">日均采购计划</a></li>
+                #{/power.ck}
                 #{power.ck "materialpurchases.index"}
                   <li class="divider"></li>
                   <li><a href="@{MaterialPurchases.index()}">物料采购单</a></li>
