--- a/core/app/views/Applys/transport.html
+++ b/core/app/views/Applys/transport.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"请款单 ${apply.serialNumber}" /}
 #{set 'moreScripts'}
-    #{script 'applys/transport.coffee'/}
+    #{script 'applys/transport.es6'/}
     #{script 'shipments/paymentunits.coffee'/}
     #{script 'component/pagination.coffee'/}
 #{/set}
@@ -20,7 +20,7 @@
     <div class="span2">
       <span class="label label-info">${apply.serialNumber}</span>
     </div>
-    <div class="span7">
+    <div class="span4">
       <form action="@{Applys.transport(apply.id)}" method="GET" class="form-inline">
         <input type="hidden" name="p.page" value="${p.page}">
         <input type="hidden" name="p.applyId" value="${p.applyId}">
@@ -28,6 +28,10 @@
                placeholder="支持运输单 ID、TrackNo、FBA、费用备注" autocomplete="off" value="${p.search}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </form>
+    </div>
+    <div class="span3">
+      <input type="button" class="btn btn-warning" id="batch_approve_btn" value="批量批准"
+             data-url="@{PaymentUnits.batchApproveFromShipment()}">
     </div>
   </div>
 </div>
