修改checkstyle的提示错误

--- a/core/app/views/Cooperators/show.html
+++ b/core/app/views/Cooperators/show.html
@@ -57,7 +57,7 @@
 
           <tr>
             <th>Type:</th>
-            <td><input type="text" readonly="" class="required" value="${coper.type.to_s()}"></td>
+            <td><input type="text" readonly="" class="required" value="${coper.type.label()}"></td>
             <th>Id:</th>
             <td><input type="text" readonly="" name="cop.id" value="${coper.id}"></td>
           </tr>
