新增供应商 省市输入框，调整运输单阶段

--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -62,7 +62,7 @@
               #{/if}
           </td>
           <td>${c.name}</td>
-          <td>${c.type?.to_s()}</td>
+          <td>${c.type?.label()}</td>
           <td>
               #{if c.type==models.procure.Cooperator.T.SUPPLIER}
                 <a href="@{Deliveryments.indexByCooperId(c.id)}" target="_blank">${c.deliveryments?.size()}</a>
