--- a/core/app/views/Shipments/_show_progress.html
+++ b/core/app/views/Shipments/_show_progress.html
@@ -122,8 +122,8 @@
         <div class="block">
           <label>平均<abbr>总运输</abbr></label>
           <span>
-                ${atport.toInteger() + clearance.toInteger() + pick.toInteger() + book.toInteger() + deliver.toInteger() + receipt.toInteger() + inbound.toInteger()}
-              </span>
+          ${atport.toInteger() + pick.toInteger() + book.toInteger() + deliver.toInteger() + receipt.toInteger() + inbound.toInteger()}
+          </span>
         </div>
         <div class="block">
           <label>实际<abbr>总运输</abbr></label>
