--- a/core/app/views/FeeTypes/index.html
+++ b/core/app/views/FeeTypes/index.html
@@ -14,30 +14,7 @@
 #{/info_row}
 
 <div class="btn-toolbar">
-  <button class="btn btn-success" data-toggle="toggle" data-target="#add_form">
-    <i class="icon-plus-sign-alt"></i>
-    新添加 FeeType
-  </button>
-</div>
-
-<div class="row-fluid" id="add_form">
-  <form method="post" action="@{FeeTypes.create()}">
-    <label>费用名称</label>
-    <input type="text" name="ft.name">
-    <label>NickName</label>
-    <input type="text" name="ft.nickName">
-    <label>费用解释</label>
-    <input type="text" name="ft.memo">
-    <label>父费用类型</label>
-    <select name="parentName">
-      <option value="">TOP</option>
-    #{list items:types, as:'parent'}
-      <option value="${parent.name}">${parent.name}:${parent.memo}</option>
-    #{/list}
-    </select>
-    <label></label>
-    <button class="btn btn-primary">创建</button>
-  </form>
+  <button class="btn btn-success" id="show_modal">新添加 FeeType</button>
 </div>
 
 <div class="row-fluid">
@@ -47,6 +24,7 @@
       <th>Child_Name</th>
       <th>NickName</th>
       <th>解释</th>
+      <th>快捷查询</th>
       <th>创建时间</th>
       <th>更新时间</th>
       <th>Action</th>
@@ -58,6 +36,7 @@
         <td></td>
         <td>${top.nickName}</td>
         <td>${top.memo}</td>
+        <td>${top.shortcut}</td>
         <td>${top.createdAt.los()}</td>
         <td>${top.updateAt.los()}</td>
         <td>
@@ -71,6 +50,7 @@
         <td></td>
         <td><input type="text" name="nickName" value="${top.nickName}"></td>
         <td>${top.memo}</td>
+        <td>${top.shortcut}</td>
         <td>${top.createdAt.los()}</td>
         <td>${top.updateAt.los()}</td>
         <td>
@@ -83,6 +63,7 @@
               <td>${c.name}</td>
               <td><input type="text" name="nickName" value="${c.nickName}"></td>
               <td>${c.memo}</td>
+              <td>${c.shortcut}</td>
               <td>${c.createdAt.los()}</td>
               <td>${c.updateAt.los()}</td>
               <td>
@@ -95,3 +76,48 @@
   #{/list}
   </table>
 </div>
+
+
+<div id="create_modal" class="modal hide fade">
+  <div class="modal-header">
+    <h4>添加FeeType信息</h4>
+  </div>
+  <div class="modal-body" style="height:300px;">
+    <form action="@{FeeTypes.create()}" method="post" id="create_form">
+      <table class="table table-condensed table-bordered">
+        <tr>
+          <th>费用名称:</th>
+          <td><input type="text" name="ft.name" required></td>
+        </tr>
+        <tr>
+          <th>NickName:</th>
+          <td><input type="text" name="ft.nickName" required></td>
+        </tr>
+        <tr>
+          <th>费用解释:</th>
+          <td><input type="text" name="ft.memo" required></td>
+        </tr>
+        <tr>
+          <th>快捷查询:</th>
+          <td><input type="text" name="ft.shortcut" required></td>
+        </tr>
+        <tr>
+          <th>父费用类型:</th>
+          <td>
+            <select name="parentName">
+              <option value="">TOP</option>
+            #{list items:types, as:'parent'}
+              <option value="${parent.name}">${parent.name}:${parent.memo}</option>
+            #{/list}
+            </select>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <button class="btn btn-primary" id="submitCreateBtn">创建</button>
+  </div>
+</div>
+
