“新增SKU”按钮变更文字为“新增物料”，同时增添删除功能

--- a/core/app/views/MaterialPurchases/blank.html
+++ b/core/app/views/MaterialPurchases/blank.html
@@ -79,7 +79,7 @@
       <button class="btn btn-primary">保存</button>
     </td>
     <td colspan="2">
-      <button class="btn btn-warning" id="addSkuBtn">新增SKU</button>
+      <button class="btn btn-warning" id="addSkuBtn">新增物料</button>
     </td>
   </tr>
 </table>
@@ -97,6 +97,7 @@
     <th>物料名称</th>
     <td>
       <input type="text" name="units[<%= num %>].material.name" readonly>
+      <button class="btn btn-danger" name="delMt">删除</button>
     </td>
   </tr>
   <tr>
