开发物料采购单,出货单报表,新增物料采购单条款

--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -104,8 +104,8 @@
           <tr>
             <td colspan="6">
               <button class="btn btn-primary" name="create_record">更新</button>
-              <a href="@{Excels.deliveryments(p)}" class="btn btn-success" target="_blank"><i
-                  class="icon-download-alt"></i>导出出货单</a>
+              <a href="@{Excels.materialPlan(dp.id)}" class="btn btn-success" target="_blank"><i
+                  class="icon-download-alt"></i>导出物料出货单</a>
             </td>
           </tr>
         </table>
