--- a/core/app/views/MaterialPurchases/show.html
+++ b/core/app/views/MaterialPurchases/show.html
@@ -131,6 +131,130 @@
     <h4 data-toggle="toggle" data-target="#excel">生成物料采购单信息 <i class="icon-reorder"></i></h4>
   </div>
 </div>
+#{if dmt.state == models.procure.Deliveryment.S.CANCEL}
+<div id="excel" class="row-fluid" style="display:none;">
+  <span class="text-error">物料采购单已经取消, 不需要生成物料采购单 Excel</span>
+</div>
+#{/if}
+#{else }
+<div id="excel" class="row-fluid" style="display:none;">
+  <div class="span12">
+    <form id="generate_excel" method="post" action="@{Excels.materialPurchase()}">
+      <table class="table table-bordered table-condensed">
+        <tr>
+          <th>交货地址</th>
+          <td colspan="7">
+          <textarea rows="3" class="span12" name="excel.deliveryAddress" id="excel_deliveryAddress"></textarea>
+          </td>
+        </tr>
+
+        <tr>
+          <th>交易条款<br>(供应商)</th>
+          <td colspan="3">
+            <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator.tradingTerms}</textarea>
+          </td>
+          <th>产品要求</th>
+          <td colspan="3">
+            <div style="overflow:auto;height:150px;width:580px;">
+                #{list items:dmt.units, as:'cooperItem'}
+                  <a target="_blank" class="btn btn-small btn-info" rel="popover" content="${cooperItem.formatProductTerms()}">
+                  ${cooperItem.material.code}
+                  </a>
+                #{/list}
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <th colspan="4"><h5 style="text-align:center">供货方信息</h5></th>
+          <th colspan="4"><h5 style="text-align:center">买方信息</h5></th>
+        </tr>
+        <tr>
+          <th>供方</th>
+          <td>
+            <input type="text" name="excel.supplierCompany" id="excel_supplierCompany" value="${dmt.cooperator.fullName}">
+          </td>
+          <th>经办人</th>
+          <td>
+            <input type="text" name="excel.supplier" id="excel_supplier" value="${dmt.cooperator.contacter}">
+          </td>
+
+          <th>买方</th>
+          <td>
+            <input type="text" name="excel.buyerCompany" id="excel_buyerCompany"
+                   value="${isB2b ? models.OperatorConfig.getVal("b2bbuyercompany"):models.OperatorConfig.getVal("buyercompany")}">
+          </td>
+          <th>经办人</th>
+          <td>
+            <input type="text" name="excel.buyer" id="excel_buyer" value="${dmt.handler?.username}">
+          </td>
+        </tr>
+
+        <tr>
+          <th>移动电话</th>
+          <td>
+            <input type="text" name="excel.supplierPhone" id="excel_supplierPhone" value="${dmt.cooperator.phone}">
+          </td>
+          <th>固定电话</th>
+          <td>
+            <input type="text" name="excel.supplierTel" id="excel_supplierTel" value="${dmt.cooperator.tel}">
+          </td>
+
+          <th>移动电话</th>
+          <td><input type="text" name="excel.buyerPhone" id="excel_buyerPhone" value="${dmt.handler?.phone}"></td>
+          <th>固定电话</th>
+          <td>
+            <input type="text" name="excel.buyerTel" id="excel_buyerTel" value="${isB2b ? '' : models.OperatorConfig.getVal("buyertel")}">
+          </td>
+        </tr>
+
+        <tr>
+          <th>传真</th>
+          <td>
+            <input type="text" name="excel.supplierFax" id="excel_supplierFax" value="${dmt.cooperator.fax}">
+          </td>
+          <td colspan="2"></td>
+
+
+          <th>传真</th>
+          <td><input type="text" name="excel.buyerFax" id="excel_buyerFax"></td>
+
+          <th>选择经办人</th>
+          <td>
+            <select id="chosebuyer">
+              <option value="">请选择</option>
+                #{list items:buyers, as:'br'}
+                    #{ifnot br.username == 'wyatt'}
+                      <option value="${br.id}">${br.username}</option>
+                    #{/ifnot}
+                #{/list}
+            </select>
+          </td>
+        </tr>
+
+        <tr>
+          <th>地址</th>
+          <td colspan="3">
+            <input type="text" class="span12" name="excel.supplierAddress" id="excel_supplierAddress" value="${dmt.cooperator.address}">
+          </td>
+
+          <th>地址</th>
+          <td colspan="3">
+            <input type="text" class="span12" name="excel.buyerAddress" id="excel_buyerAddress"
+                   value="${isB2b ? models.OperatorConfig.getVal("b2bbuyeraddress") :models.OperatorConfig.getVal("buyeraddress")}">
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">
+            <input type="hidden" name="id" value="${dmt.id}">
+            <input type="button" id="mt_excel_btn" class="btn btn-success" value="生成采购单 Excel">
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+</div>
+#{/else}
 
 
 #{records records:records/}
