--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -32,6 +32,13 @@
         #{/list}
         </select>
 
+        <select name="p.number" class="inline selectize" style="width:150px;">
+          <option value="">B0M—ID</option>
+        #{list items:boms, as:'bs'}
+          <option ${bs.number == p.number ? 'selected' : ''} value="${bs.number}">${bs.number}</option>
+        #{/list}
+        </select>
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称" value="${p.search}">
@@ -57,6 +64,7 @@
               </label>
             </th>
             <th>物料编码</th>
+            <th>B0M—ID</th>
             <th>物料名称</th>
             <th>物料类别</th>
             <th>采购余量</th>
@@ -75,6 +83,7 @@
                 #{/if}
             </td>
             <td>${m.code}</td>
+            <td>${m.boms[0]?.number}</td>
             <td>${m.name}</td>
             <td>${m.type.label()}</td>
             <td>${m.surplusConfirmQty()}</td>
