--- a/core/app/views/MaterialUnits/_unit_list.html
+++ b/core/app/views/MaterialUnits/_unit_list.html
@@ -38,7 +38,7 @@
     <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
     ${unit.id}
     </td>
-    <td style="color:${unit.stage?.rgb()}">${unit.stage.label()}</td>
+    <td style="background:${unit.stage?.rgb()}">${unit.stage.label()}</td>
     <td>${unit.material?.code}${str}</td>
     <td>${unit.material?.name}</td>
     <td>${unit.materialPurchase?.id}</td>
