--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -86,7 +86,9 @@
             <td>${m.boms[0]?.number}</td>
             <td>${m.name}</td>
             <td>${m.type.label()}</td>
-            <td>${m.surplusConfirmQty()}</td>
+            <td>
+              <a href="javascript:void(0)" target="_blank" rel="tooltip" title="出货可用数">${m.surplusConfirmQty()}</a>
+            </td>
             <td>${m.surplusPendingQty()}</td>
             <td>${m.cooperators()}</td>
             <td>${m.projectName}</td>
