物料出货单页面文字调整

--- a/core/app/views/MaterialPlans/blank.html
+++ b/core/app/views/MaterialPlans/blank.html
@@ -26,7 +26,7 @@
             <td><input type="text" value="${dp?.state?.label()}" readonly></td>
           </tr>
           <tr>
-            <th>出货单名称<span style="color:red">*</span></th>
+            <th>物料出货单名称<span style="color:red">*</span></th>
             <td><input type="text" class="span8" name="dp.name" value="${dp.name}" required></td>
             <th>收货类型<span style="color:red">*</span></th>
             <td>
