--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -19,13 +19,13 @@
       <form action="@{MaterialPlans.update()}" method="post" name="updateDeliverymentForm" id="updateDeliverymentForm">
         <table class="table table-condensed table-bordered">
           <tr>
-            <th>物料出库单ID</th>
+            <th>物料出货单ID</th>
             <td><input type="text" id="deliverymentId" name="dp.id" value="${dp?.id}" readonly/></td>
             <th>State</th>
             <td><input type="text" value="${dp?.state?.label()}" readonly></td>
           </tr>
           <tr>
-            <th>出库单名称<span style="color:red">*</span></th>
+            <th>物料出货单名称<span style="color:red">*</span></th>
             <td>
               <input type="text" class="span8" name="dp.name" value="${dp.name}" #{if !qtyEdit}readonly#{/if} required>
             </td>
