修改确认采购请款单功能

--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -36,8 +36,8 @@
       <button class="btn btn-danger" disabled="">请款单已经确认</button>
     #{/if}
     #{else }
-      <a id="confirm_btn" href='@{Applys.procureConfirm(apply.id)}' class="btn btn-success"
-         data-remote='true' data-method='PUT' data-disable-with='确认中...'>确认请款单</a>
+      <a href='@{Applys.procureConfirm(apply.id)}' class="btn btn-success"
+          data-disable-with='确认中...'>确认请款单</a>
     #{/else}
     </div>
   </div>
