--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -4,6 +4,7 @@
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
     #{script 'materialPlans/edit.js'/}
+    #{script 'materialPlans/show.coffee'/}
 #{/set}
 
 #{errorMsgs /}
