--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -45,6 +45,7 @@
             <th>物料类别</th>
             <th>B0M—ID</th>
             <th>规格</th>
+            <th width="150px;">材质</th>
             <th width="150px;">工艺</th>
             <th width="150px;">图号/版本</th>
             <th width="150px;">最近采购价</th>
@@ -57,6 +58,7 @@
             <td>${m.type.label()}</td>
             <td>${m.boms[0]?.number}</td>
             <td>${m.specification}</td>
+            <td>${m.texture}</td>
             <td>${m.technology}</td>
             <td>${m.version}</td>
             <td>${m.nowPurchasePlanPrice()}</td>
