更改支付方式 name

--- a/core/app/views/Payments/show.html
+++ b/core/app/views/Payments/show.html
@@ -131,7 +131,7 @@
             <div class="control-group">
               <label class="control-label">金额</label>
               <input type="hidden" id="ratioInput" name="ratio" value="-1">
-              <input type="hidden" id="ratioDateTimeInput" name="ratio_publish_date">
+              <input type="hidden" id="ratioDateTimeInput" name="ratioPublishDate">
 
               <div class="controls">
                 <input type="text" placeholder="最终支付金额" name="actualPaid" id="actualPaid">
