区别B2B页面，重新设计B2B的采购计划index页面

--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -132,7 +132,12 @@
         </tr>
         <tr id="dmt_${dmt_index}" style="display:none;">
           <td colspan="13">
-              #{render 'ProcureUnits/_unit_list.html', units:dmt.units, norecord: true/}
+              #{if isB2B}
+                  #{render 'ProcureUnits/_b2b_unit_list.html', units:dmt.units, norecord: true/}
+              #{/if}
+              #{else }
+                  #{render 'ProcureUnits/_unit_list.html', units:dmt.units, norecord: true/}
+              #{/else}
           </td>
         </tr>
       #{/list}
