--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -159,7 +159,12 @@
   <input type="hidden" name="expressid" id="expressid" value="${expressid}">
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'ProcureUnits/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{if isB2B}
+        #{render 'ProcureUnits/_b2b_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{/if}
+    #{else }
+        #{render 'ProcureUnits/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{/else}
     </div>
   </div>
   <div class="row-fluid">
@@ -339,7 +344,12 @@
     <div class="row-fluid">
       <div class="span12">
         <input type="hidden" name="dmt.id" value="${dmt.id}">
-          #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
+          #{if isB2B}
+              #{render 'ProcureUnits/_b2b_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
+          #{/if}
+          #{else }
+              #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
+          #{/else}
       </div>
     </div>
     <div class="row-fluid">
