--- a/core/app/views/ShipmentReports/monthlyShipmentPrescription.html
+++ b/core/app/views/ShipmentReports/monthlyShipmentPrescription.html
@@ -27,13 +27,11 @@
           <span class="add-on"><i class="icon-search"></i></span>
           <button class="btn btn-primary" data-loading>统计</button>
         </div>
-
         <div class="input-append input-prepend inline">
           <span class="add-on"><i class="icon-file"></i></span>
-          <input type="button" class="btn btn-success" id="download_excel" data-url="@{Excels.exportMonthlyShipmentPrescription()}"
-                 value="导出Excel"/>
+          <input type="button" class="btn btn-success" id="download_excel" value="导出Excel"
+                 data-url="@{Excels.exportMonthlyShipmentPrescription()}"/>
         </div>
-
       </div>
     </div>
   </form>
