修改B2B箱外麦

--- a/core/app/views/FBAs/b2bBoxLabel.html
+++ b/core/app/views/FBAs/b2bBoxLabel.html
@@ -37,7 +37,7 @@
                   <span style="font-weight: bold;">SKU</span>
                 </th>
                 <th width="8%">
-                  <span style="font-weight: bold;">箱数(Ctn)</span>
+                  <span style="font-weight: bold;">"箱号<br>(第几箱-总箱数)</span>
                 </th>
               </tr>
               <tr>
@@ -47,14 +47,14 @@
                 <td></td>
               </tr>
               <tr>
-                <th>箱号</th>
                 <th>产品名称</th>
-                <th>净重(KG)</th>
+                <th>数量（pcs)</th>
                 <th>毛重(KG)</th>
+                <th>长*宽*高(cm)</th>
               </tr>
               <tr>
-                <td height="50px;"></td>
                 <td>${procureUnit?.product?.abbreviation}</td>
+                <td height="50px;"></td>
                 <td></td>
                 <td></td>
               </tr>
