mengtop增加 采购单为空的判断

--- a/core/app/views/Inbounds/copyTd.html
+++ b/core/app/views/Inbounds/copyTd.html
@@ -5,7 +5,7 @@
     <input type="hidden" name="dtos[${index}].unitId" value="${unit.id}">
   </td>
   <td>${unit.id}</td>
-  <td>${unit.deliveryment.id}</td>
+  <td>${unit.deliveryment?.id}</td>
   <td>${unit.selling?.sellingId}</td>
   <td>${unit.product.sku}</td>
   <td>${unit.product.abbreviation}</td>
@@ -26,7 +26,7 @@
     <input type="hidden" name="dtos[${index}].unitId" value="${unit.id}">
   </td>
   <td>${unit.id}</td>
-  <td>${unit.deliveryment.id}</td>
+  <td>${unit.deliveryment?.id}</td>
   <td>${unit.selling?.sellingId}</td>
   <td>${unit.product.sku}</td>
   <td>${unit.product.abbreviation}</td>
@@ -47,7 +47,7 @@
     <input type="hidden" name="dtos[${index}].unitId" value="${unit.id}">
   </td>
   <td>${unit.id}</td>
-  <td>${unit.deliveryment.id}</td>
+  <td>${unit.deliveryment?.id}</td>
   <td>${unit.selling?.sellingId}</td>
   <td>${unit.product.sku}</td>
   <td>${unit.product.abbreviation}</td>
