--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -160,7 +160,7 @@
               <input type="hidden" name="pids" value="${unit.id}">
             </td>
             <td>${unit.id}</td>
-            <td>${unit.deliveryment.id}</td>
+            <td>${unit.deliveryment?.id}</td>
             <td>${unit.selling?.sellingId}</td>
             <td>${unit.product.abbreviation}</td>
             <td>${unit.cooperator?.name}</td>
