--- a/core/app/views/Secure/login.html
+++ b/core/app/views/Secure/login.html
@@ -19,7 +19,7 @@
 
     <p id="username-field">
         <label for="username">&{'secure.username'}</label>
-        <input type="text" name="username" id="username" value="${flash.username}"/>
+        <input type="text" name="username" id="username" value="${flash.username}" autocomplete="off"/>
     </p>
 
     <p id="password-field">
